[project]
name = "xai_xircuitphant"
version = "0.1.0"
description = "Workflow for elphant using Xircuits"
authors = [{ name = "Jan Nolten", email = "j.nolten@fz-juelich.de" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/JanNolten/xai_xircuitphant.git"
keywords = ["xircuits"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "example.xircuits"
requirements_path = "requirements.txt"